<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">数据传输</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="baudRate">Baudrate</string>
    <string name="baud_rate_str">Baudrate</string>
    <string name="stop_bit">StopBits</string>  
    <string name="data_bit">DataBits</string>
    <string name="parity_str">Parity</string>
    <string name="flow">Flow</string>
  <!--   <string name="time_out_str">TimeOut</string>   -->
    <string name="config">启动</string>
    <string name="read_bytes">读取</string>
    <string name="write_bytes">写入</string>
    <string name="send_bytes">上传信息反馈</string>
    <string name="write">写入</string>
    <string name="send">发送</string>
    <string name="fankui">上传情况反馈...</string>
    <string name="enter">点击输入...</string>
    <string name="morenxianshi">设备未连接...</string>
	<string name="neterror">没有可用的网路，请检查网络设置</string>

    <string-array name="baud_rate">        
		<item>300</item>        
		<item>600</item>        
		<item>1200</item>     
		<item>2400</item>   
		<item>4800</item>        
		<item>9600</item>        
		<item>19200</item>        
		<item>38400</item>        
		<item>57600</item>
		<item>115200</item>
		<item>230400</item>    
		<item>460800</item>
		<item>921600</item>
	</string-array>
	
	<string-array name="stop_bits">        
		<item>1</item>        
		<item>2</item>        
	</string-array>
		
	<string-array name="data_bits">   
	    <item>5</item>
	    <item>6</item>
		<item>7</item>        
		<item>8</item>        
	</string-array>
	
	<string-array name="parity">        
		<item>None</item>        
		<item>Odd</item>
		<item>Even</item>
		<item >Mark</item>
		<item >Space</item>
	</string-array>
	
	<string-array name="flow_control">        
		<item>None</item>        
		<item>CTS/RTS</item>
	</string-array>
	
	<!--  
	<string-array name="time_out">
	    <item>5ms</item>
	    <item>10ms</item>
	    <item>15ms</item>
	    <item>20ms</item>
	</string-array>
	-->

</resources>
